fixed ticker overflow

--- a/styles/sass/screen.sass
+++ b/styles/sass/screen.sass
@@ -206,6 +206,7 @@ footer
 .ticker
 	height: 40px
 	position: relative
+	overflow: hidden
 	background-color: #e89c59
 	white-space: nowrap
 	z-index: 100
